# auro-cocos-mcp

./: .gitignore  .mcp-update-state.json  ACTIVATION.txt  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  GEMINI.md  LICENSE  QUICK_START_TESTING.md  README.md  TESTING_SUMMARY.md  TEST_CASES_README.md  _cov.txt  animation-ipc.spec.ccc  diagnose-ipc.ts  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  version.json  vitest.config.ts
.claude/: settings.local.json
doc/: mcp稳定性增强方案_79e594ce.plan.md  mcp高级防护与稳定性增强方案_备用.md
docs/: ACTION_CAPABILITIES.html  BUSINESS_STRATEGY_REPORT.html  COMMERCIAL_STRATEGY.md  COMPETITIVE_ANALYSIS.html  COMPETITIVE_ANALYSIS.md  FEATURE_BREADTH_ANALYSIS.md  PRODUCT_TRUST_ASSET.md  RELEASE_READINESS_REPORT.html  RESTART_SMOKE_WORKFLOW.md  TOOLS_REFERENCE.md  code-analysis-report.html  ipc-reference-3.8.8.md  panel-concept-project-pulse.html  panel-concepts-overview.html  theme1_linear.html  theme3_modern.html  theme_aura_ultra.html  theme_holographic.html  trust-metrics.json
mcp-config-templates/: claude-desktop-stdio.example.json  codex-stdio.example.toml  cursor-http.example.json
native/: .gitignore  Cargo.toml  index.js
native/src/: lib.rs  license.rs  package.json  types.rs  validate.rs
native/src/tools/: anim_workflow.rs  animation.rs  asset.rs  atomic.rs  audit.rs  batch.rs  editor.rs  engine.rs  generator.rs  knowledge.rs  linter.rs  misc.rs  mod.rs  oplog.rs  physics.rs  reference.rs  scaffold.rs  scene.rs  script.rs  tests.rs  ui_gen.rs
scripts/: build-native.mjs  build-panel.mjs  build-protected.mjs  patch_css.js  (+36 more)
(+167 files in other folders)
