[package]
name = "cocos-mcp-pro"
version = "1.0.0"
edition = "2021"
description = "Cocos MCP Bridge Pro — Native core for protected tool logic"
license = "Proprietary"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi9", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
